--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@material-ui/core": "^4.5.1",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.15.6",
-    "gatsby-cli": "^2.8.8",
+    "gatsby-cli": "^2.8.10",
     "gatsby-image": "^2.2.17",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.13",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-postcss": "^2.1.13",
