--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gatsby-cli": "^2.8.10",
     "gatsby-image": "^2.2.17",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.2.13",
+    "gatsby-plugin-manifest": "^2.2.29",
+    "gatsby-plugin-netlify": "^2.1.25",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-postcss": "^2.1.13",
     "gatsby-plugin-react-helmet": "^3.1.6",
