--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2"
   },
