--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "bootstrap": "^4.3.1",
     "gatsby": "^2.15.6",
     "gatsby-image": "^2.2.33",
-    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-netlify": "^2.1.25",
     "gatsby-plugin-offline": "^2.2.10",
@@ -27,9 +26,12 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.8.0",
     "react-lazy-hero": "^2.0.0",
     "react-scroll-parallax": "^2.2.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "typeface-raleway": "0.0.75",
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
