--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@material-ui/core": "^4.5.1",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.15.6",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-manifest": "^2.2.29",
-    "gatsby-plugin-netlify": "^2.1.25",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-postcss": "^2.1.13",
-    "gatsby-plugin-react-helmet": "^3.1.6",
+    "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-source-filesystem": "^2.1.38",
     "gatsby-source-wordpress": "^3.1.29",
@@ -31,8 +29,7 @@
     "react-lazy-hero": "^2.0.0",
     "react-scroll-parallax": "^2.2.0",
     "styled-components": "^4.4.0",
-    "typeface-raleway": "0.0.75",
-    "typeface-roboto": "0.0.75"
+    "typeface-raleway": "0.0.75"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
