--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.15.6",
+    "gatsby": "^2.18.5",
+    "gatsby-cli": "^2.8.14",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^2.2.10",
