--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome",
-      "url": "http://localhost:8080",
+      "url": "localhost:8080",
       "webRoot": "${workspaceFolder}"
     },
     {
@@ -17,12 +17,5 @@
       "port": 9222,
       "webRoot": "${workspaceFolder}"
     },
-    {
-      "type": "chrome",
-      "request": "launch",
-      "name": "Launch Chrome against localhost",
-      "url": "http://localhost:8000",
-      "webRoot": "${workspaceFolder}"
-    }
   ]
 }
