--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gatsby": "^2.18.5",
-    "gatsby-cli": "^2.8.16",
+    "gatsby-cli": "^2.8.26",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^2.2.10",
@@ -15,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-source-filesystem": "^2.1.38",
+    "gatsby-source-google-places": "^0.0.4",
     "gatsby-source-wordpress": "^3.1.29",
     "gatsby-transformer-sharp": "^2.3.5",
     "jquery": "^3.4.1",
@@ -22,9 +23,9 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
+    "react": "^16.8.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.8.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-lazy-hero": "^2.0.0",
