--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@popmotion/popcorn": "^0.4.4",
+    "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.3.1",
-    "gatsby": "^2.18.5",
+    "framer-motion": "^1.9.1",
+    "gatsby": "^2.19.25",
     "gatsby-cli": "^2.8.29",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-postcss": "^2.1.13",
     "gatsby-plugin-react-helmet": "^3.1.16",
-    "gatsby-plugin-sharp": "^2.3.2",
+    "gatsby-plugin-sharp": "^2.4.0",
+    "gatsby-plugin-styled-components": "^3.1.20",
     "gatsby-source-filesystem": "^2.1.38",
     "gatsby-source-google-places": "^0.0.4",
     "gatsby-source-wordpress": "^3.1.29",
@@ -30,7 +34,7 @@
     "react-icons": "^3.8.0",
     "react-lazy-hero": "^2.0.0",
     "react-scroll-parallax": "^2.2.0",
-    "styled-components": "^4.4.0",
+    "styled-components": "^5.0.1",
     "typeface-raleway": "0.0.75"
   },
   "devDependencies": {
