--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^4.3.1",
     "framer-motion": "^1.9.1",
     "gatsby": "^2.19.25",
-    "gatsby-cli": "^2.8.29",
+    "gatsby-cli": "^2.10.11",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^2.2.10",
@@ -32,8 +32,10 @@
     "react-dom": "^16.8.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
+    "react-intersection-observer-hook": "^1.0.4",
     "react-lazy-hero": "^2.0.0",
     "react-scroll-parallax": "^2.2.0",
+    "react-typed": "^1.2.0",
     "styled-components": "^5.0.1",
     "typeface-raleway": "0.0.75"
   },
