working on testimonials carousel

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^3.8.0",
     "react-intersection-observer-hook": "^1.0.4",
     "react-lazy-hero": "^2.0.0",
+    "react-owl-carousel2": "^0.3.0",
     "react-scroll-parallax": "^2.2.0",
     "react-typed": "^1.2.0",
     "styled-components": "^5.0.1",
